# demo_thermal_control

./: README.md
thermal_control/: CMakeLists.txt  package.xml
thermal_control/include/thermal_control/: coolant.hpp  external_loop.hpp  on_demand_publisher.hpp  radiators.hpp  solar_heat_node.hpp  sun_vector.hpp  thermal_solver.hpp
thermal_control/launch/: solar_absorpitivity.launch.py  thermal_network.launch.py  thermals.launch.py
thermal_control/plugin/: CMakeLists.txt  thermal_plugin.cc  thermal_plugin.hh
thermal_control/plugin/proto/thermal_control/msgs/: ThermalNodeState.proto
thermal_control/src/: coolant.cpp  cooling_system_server.cpp  external_loop.cpp  on_demand_publisher.cpp  radiators.cpp  solar_heat_node.cpp  sun_vector.cpp  temp_publish_node.cpp  thermals_solver.cpp
thermal_control/srv/: Cooling.srv
